Initialize userdefined element. b=176709, r=nisheeth@netscape.com, sr=jst@netscape.com